--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,22 +25,12 @@ services:
     restart: 'unless-stopped'
     networks:
       - backend
-    links:
-      - mysql
-    depends_on:
-      - mysql
-  mysql:
-    image: mysql:5.7
-    container_name: mysql
-    environment:
-      MYSQL_ROOT_USER: root
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: test
+  pdftohtml:
+    image: pavanreddi123/pdf2htmlex
+    container_name: pdftohtml
     ports:
-      - '3306:3306'
-    networks:
-      - backend
-
+      - '4000:4000'
+    restart: always
 networks:
   backend:
     driver: bridge
